# migracao-venezuelana-oeste-sc

./: .env.example  .gitignore  AUDITORIA_FIGURAS.md  AUDITORIA_PAINEL.md  AUDITORIA_RAIS.md  AUDITORIA_SIH.md  CITATION.cff  LICENSE  Makefile  NOTA_PERFIL_ETARIO_CENSO2022.md  PLANO.md  README.md  RELATORIO_AUDITORIA.md  pyproject.toml  references.bib  requirements.txt
artigo/: artigo_academico.docx  artigo_academico_figuras.docx  artigo_v1.docx  artigo_v1.md
docs/: caged_limitacoes.md  censo2022_achados_chapeco.md  censo2022_venezuela_status.md  dicionario_dados.md  literatura_para_artigo.md  metodologia.md  nacionalidade_sim_sinasc.md  rais_resultados_preliminares.md  revisao_bibliografica.md  sc_matricula_cross_verification.md  sc_matricula_dim01.md  sc_matricula_dim02.md  sc_matricula_dim03.md  sc_matricula_dim04.md  sc_matricula_dim05.md  sc_matricula_dim06.md  sc_matricula_dim07.md  sc_matricula_dim08.md  sc_matricula_dim09.md  sc_matricula_dim10.md  sc_matricula_dim11.md  sc_matricula_dim12.md  sc_matricula_insight.md
notebooks/: 01_exploracao_ibge.ipynb  02_analise_datasus.ipynb  03_analise_rais_caged.ipynb  04_analise_educacao.ipynb  05_analise_espacial.ipynb  06_dashboard.ipynb
scripts/: README.md  analisar_sih_sus.py  auditoria_painel.py  auditoria_painel_completo.py  auditoria_painel_final.py  auditoria_rais.py  auditoria_recriar_figuras.py  check_credentials.py  consolida_rais.py  corrige_rais.py  corrigir_painel.py  download_censo2022_nacionalidade.py  gerar_mapas_coropleticos.py  gerar_painel_longitudinal.py  gerar_piramide_etaria.py  run_ingestion.py  (+9 more)
(+35 files in other folders)
